--- a/index.html
+++ b/index.html
@@ -5,11 +5,27 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Albert+Sans&display=swap" rel="stylesheet">
     <title>Eid Zakat</title>
 </head>
 
 <body>
+    <header class="banner">
+        <div class="main">
+            <div class="left-side">
+                <h1>Let's Finish your <br> internal Evil</h1>
+                <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset. No duo populo
+                    animal noluisse, enim</p>
+                <a class="header-btn" href="#">Donate Now</a>
+            </div>
+            <div class="right-side">
 
+            </div>
+        </div>
+    </header>
 </body>
 
 </html>
