all section added

--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Albert+Sans&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Splash&display=swap" rel="stylesheet">
     <title>Eid Zakat</title>
 </head>
 
@@ -26,6 +29,126 @@
             </div>
         </div>
     </header>
+
+    <main>
+        <section class="flex">
+            <div class="half-width">
+                <h1>Their lives depend on <br>
+                    your donation</h1>
+                <p>Lorem ipsum dolor sit amet, usu cu esse possit
+                    referrentur, at eam falli deterruisset. No duo populo
+                    animal noluisse, enim</p>
+                <p>Lorem ipsum dolor sit amet, usu cu esse possit
+                    referrentur, at eam falli deterruisset.</p>
+                <a class="header-btn" href="#">Donate Now</a>
+            </div>
+            <div class="half-width">
+                <img src="images/right-section.png" alt="">
+            </div>
+        </section>
+
+        <section class="flex">
+            <div class="half-width">
+                <img src="images/right-section.png" alt="">
+            </div>
+
+            <div class="half-width">
+                <h1>Their lives depend on <br>
+                    your donation</h1>
+                <p>Lorem ipsum dolor sit amet, usu cu esse possit
+                    referrentur, at eam falli deterruisset. No duo populo
+                    animal noluisse, enim</p>
+                <p>Lorem ipsum dolor sit amet, usu cu esse possit
+                    referrentur, at eam falli deterruisset.</p>
+                <a class="header-btn" href="#">Donate Now</a>
+            </div>
+        </section>
+
+        <section class="donate-section">
+            <div class="donation-area">
+                <h1>Their lives depend on <br>
+                    your donation
+                </h1>
+                <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli <br>
+                    deterruisset. No duo populo animal noluisse, enim</p>
+            </div>
+
+            <div class="donation-icon-area">
+                <div class="donation-icon">
+                    <img src="images/Frame.png" alt="">
+                    <h3>Direct Help</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam quae eaque sapiente ad suscipit
+                        consequatur!</p>
+                </div>
+                <div class="donation-icon">
+                    <img src="images/Frame.png" alt="">
+                    <h3>Direct Help</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam quae eaque sapiente ad suscipit
+                        consequatur!</p>
+                </div>
+            </div>
+            <div class="donation-icon-area">
+                <div class="donation-icon">
+                    <img src="images/Frame.png" alt="">
+                    <h3>Direct Help</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam quae eaque sapiente ad suscipit
+                        consequatur!</p>
+                </div>
+                <div class="donation-icon">
+                    <img src="images/Frame.png" alt="">
+                    <h3>Direct Help</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam quae eaque sapiente ad suscipit
+                        consequatur!</p>
+                </div>
+            </div>
+        </section>
+
+        <section class="sun">
+            <div>
+                <img src="images/sun.png" alt="">
+                <img src="images/sun.png" alt="">
+                <img src="images/sun.png" alt="">
+            </div>
+        </section>
+
+        <section class="charity">
+            <div class="charity-area">
+                <h1>Extend Your Hand of Charity. Earn <br>
+                    Rewards for the Hereafter</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. In blanditiis maiores dicta, <br> atque
+                    velit voluptates tempore nihil vel soluta minus. </p>
+            </div>
+
+            <div class="flex1">
+                <div class="sun1">
+                    <img src="images/love.png" alt="">
+                    <h3>Zakat Fund</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi, alias perferendis. Id
+                        necessitatibus provident, voluptatem ab repudiandae enim ipsam qui.</p>
+                    <a href="">Donate Fund</a>
+                </div>
+                <div class="sun1">
+                    <img src="images/love.png" alt="">
+                    <h3>Zakat Fund</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi, alias perferendis. Id
+                        necessitatibus provident, voluptatem ab repudiandae enim ipsam qui.</p>
+                    <a href="">Donate Fund</a>
+                </div>
+                <div class="sun1">
+                    <img src="images/love.png" alt="">
+                    <h3>Zakat Fund</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi, alias perferendis. Id
+                        necessitatibus provident, voluptatem ab repudiandae enim ipsam qui.</p>
+                    <a href="">Donate Fund</a>
+                </div>
+            </div>
+        </section>
+    </main>
 </body>
+
+<footer>
+    <h4>Eid Ul Adha</h4>
+    <p>I'm gonna do it</p>
+</footer>
 
 </html>
